--- a/templates/errors/401.html.twig
+++ b/templates/errors/401.html.twig
@@ -9,9 +9,9 @@
 
 {% block main %}
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
-        <h1>403</h1>
+        <h1>401</h1>
         <div>Unauthorized</div>
-        <a href="#" onclick="goBack(); return false;">Go back</a>
+        <a href="#" onclick="goBack(); return false;">Wróć</a>
     </div>
 
     <script>
