--- a/templates/errors/404.html.twig
+++ b/templates/errors/404.html.twig
@@ -11,7 +11,7 @@
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
         <h1>404</h1>
         <div>Page not found</div>
-        <a href="#" onclick="goBack(); return false;">Go back</a>
+        <a href="#" onclick="goBack(); return false;">Wróć</a>
     </div>
 
     <script>
