--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,14 +7,15 @@
 {% block main %}
     {% set errors =  get("errors") %}
     <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4" style="height: calc(100vh - 56px);">
+        <h1 class="text-center mt-3">Car Service Management</h1>
         <form
             action="/service-details"
             method="GET"
             style="height: max-content"
         >
             <div
-                class="container d-flex flex-column justify-content-center align-items-center gap-3 "
-                style="height: calc(100vh - 56px);"
+                class="container d-flex flex-column align-items-center"
+                style="height: calc(100vh - 56px); margin-top: 20%"
             >
                 <div class="input-group rounded-3 w-50">
                     <input
