--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,9 @@
 <footer class="py-5 bg-body-tertiary border-top">
-    footer
+    <div class="container">
+        <p class="text-center">
+            <strong>
+                &copy; 2024 - Car Service Management
+            </strong>
+        </p>
+    </div>
 </footer>
