--- a/templates/service/update/update-service.html.twig
+++ b/templates/service/update/update-service.html.twig
@@ -4,62 +4,70 @@
     Edytuj usługę
 {% endblock title %}
 
-{% block sidebar %}
-{% endblock sidebar %}
 
 {% block main %}
     {% set errors =  get("errors") %}
-    <h1 class="text-center">Edytuj usługę</h1>
-    <form class="row" action="/update-service?id={{ serviceModel.Id }}" method="POST">
-        <div class="col">
-            <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
-                <div class="form-floating w-100">
-                    <input
+    <div
+        class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex flex-column gap-2 my-5"
+        style="min-height: calc(100vh - 56px);">
+        <h1 class="text-center">Edytuj usługę</h1>
+        <form class="row" action="/update-service?id={{ serviceModel.Id }}" method="POST">
+            <div class="col">
+                <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
+                    <div class="form-floating w-100">
+                        <input
                             id="serviceId"
                             type="text"
                             name="serviceId"
                             readonly
                             value="{{ serviceModel.Id }}"
                             class="form-control form-control-lg">
-                    <label for="serviceId">ID</label>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="serviceId">ID</label>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="name"
                             type="text"
                             name="name"
                             value="{{ serviceModel.Name }}"
                             class="form-control form-control-lg {{ errors.name ? 'is-invalid' : '' }}">
-                    <label for="name">Nazwa</label>
-                    <span class="invalid-feedback">{{ errors.name | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="name">Nazwa</label>
+                        <span class="invalid-feedback">{{ errors.name | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="cost"
                             type="number"
                             step="0.1"
                             name="cost"
                             value="{{ serviceModel.Cost }}"
                             class="form-control form-control-lg {{ errors.cost ? 'is-invalid' : '' }}">
-                    <label for="cost">Koszt</label>
-                    <span class="invalid-feedback">{{ errors.cost | first }}</span>
+                        <label for="cost">Koszt</label>
+                        <span class="invalid-feedback">{{ errors.cost | first }}</span>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
-                <div class="form-floating w-100">
+            <div class="col">
+                <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
+                    <div class="form-floating w-100">
                     <textarea
-                            id="comment"
-                            type="text"
-                            rows="20"
-                            name="comment"
-                            class="form-control form-control-lg {{ errors.comment ? 'is-invalid' : '' }}">{{ serviceModel.Comment }}</textarea>
-                    <label for="comment">Komentarz</label>
-                    <span class="invalid-feedback">{{ errors.comment | first }}</span>
+                        id="comment"
+                        type="text"
+                        rows="20"
+                        name="comment"
+                        class="form-control form-control-lg {{ errors.comment ? 'is-invalid' : '' }}">{{ serviceModel.Comment }}</textarea>
+                        <label for="comment">Komentarz</label>
+                        <span class="invalid-feedback">{{ errors.comment | first }}</span>
+                    </div>
+                    <button class="btn btn-success w-100">Edytuj usługę</button>
+                    <a href="#" onclick="goBack(); return false;" class="btn btn-danger w-100">Anuluj</a>
                 </div>
-                <button class="btn btn-outline-success w-100">Edytuj usługę</button>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 {% endblock main %}
