--- a/templates/worker/car-list.html.twig
+++ b/templates/worker/car-list.html.twig
@@ -30,7 +30,8 @@
                             </span>
                             <span class="d-block">Status realizacji: {{ car.Status }}</span>
                             <span class="d-block">Data przyjęcia: {{ car.AdmissionDate }}</span>
-                            <span class="d-block">Data oddania: {{ car.SubmissionDate is null ? '----' : car.SubmissionDate }} </span>
+                            <span
+                                class="d-block">Data oddania: {{ car.SubmissionDate is null ? '----' : car.SubmissionDate }} </span>
                         </button>
                     </h3>
                     <div id="car-{{ car.Id }}"
@@ -80,6 +81,7 @@
                             <hr>
                             <div class="fw-bold mt-3 mb-1">Lista przeprowadzonych napraw</div>
                             {% if car.services is not empty %}
+                                {% set service = car.services %}
                                 <table class="table table-striped table-bordered table-hover mb-0">
                                     <thead>
                                     <tr>
@@ -87,6 +89,7 @@
                                         <th>Nazwa</th>
                                         <th>Komentarz</th>
                                         <th>Koszt</th>
+                                        <th>Akcja</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -97,6 +100,15 @@
                                             <td>{{ service.Name }}</td>
                                             <td class="align-middle">{{ service.Comment is empty ? '<div style="height:2px;border-width:0;color:gray;background-color:gray;width:100%"></div>' : service.Comment }}</td>
                                             <td>{{ service.Cost }}</td>
+                                            <td class="d-flex justify-content-center gap-2">
+                                                <a href="/update-service?id={{ service.Id }}"
+                                                   class="btn btn-success">Edytuj</a>
+                                                <form action="/delete-service?id={{ service.Id }}" method="POST">
+                                                    <button class="btn btn-danger">
+                                                        Usuń
+                                                    </button>
+                                                </form>
+                                            </td>
                                         </tr>
                                         {% set i = i + 1 %}
                                     {% endfor %}
@@ -105,10 +117,10 @@
                             {% else %}
                                 Brak informacji
                             {% endif %}
-{#                            TODO: Dodac linki#}
                             <div class="pt-5">
-                                <a href="" class="btn btn-outline-primary">Edytuj samochód</a>
-                                <a href="" class="btn btn-outline-secondary">Edytuj listę</a>
+                                <a href="/update-car?id={{ car.Id }}" class="btn btn-primary">Edytuj pojazd</a>
+                                <a href="/update-client?id={{ client.ClientId }}" class="btn btn-secondary">Edytuj klienta</a>
+                                <a href="/add-service?carId={{ car.Id }}" class="btn btn-info">Dodaj usługę</a>
                             </div>
                         </div>
                     </div>
