--- a/templates/worker/update/update-client.html.twig
+++ b/templates/worker/update/update-client.html.twig
@@ -4,138 +4,149 @@
     Edytuj klienta
 {% endblock title %}
 
-{% block sidebar %}
-{% endblock sidebar %}
-
 {% block main %}
-    {% set errors =  get("errors") %}
-    <h1 class="text-center">Edytuj klienta</h1>
-    <form class="row" action="/update-client?id={{ clientModel.Id }}" method="POST">
-        <div class="col">
-            <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
-                <div class="form-floating w-100">
-                    <input
+    <div
+        class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex flex-column gap-2 my-5"
+        style="min-height: calc(100vh - 56px);">
+        {% set errors =  get("errors") %}
+        <h1 class="text-center">Edytuj klienta</h1>
+        <form class="row" action="/update-client?id={{ clientModel.Id }}" method="POST">
+            <div class="col">
+                <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
+                    <div class="form-floating w-100">
+                        <input
                             id="clientId"
                             type="text"
                             name="clientId"
                             value="{{ clientModel.Id }}"
                             readonly
                             class="form-control form-control-lg">
-                    <label for="clientId">ID</label>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="clientId">ID</label>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="firstname"
                             type="text"
                             name="firstname"
                             value="{{ clientModel.Firstname }}"
                             class="form-control form-control-lg {{ errors.firstname ? 'is-invalid' : '' }}">
-                    <label for="username">Imie</label>
-                    <span class="invalid-feedback">{{ errors.firstname | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="username">Imie</label>
+                        <span class="invalid-feedback">{{ errors.firstname | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="lastname"
                             type="text"
                             name="lastname"
                             value="{{ clientModel.Lastname }}"
                             class="form-control form-control-lg {{ errors.lastname ? 'is-invalid' : '' }}">
-                    <label for="password">Nazwisko</label>
-                    <span class="invalid-feedback">{{ errors.lastname | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="password">Nazwisko</label>
+                        <span class="invalid-feedback">{{ errors.lastname | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="NIP"
                             type="text"
                             name="NIP"
                             value="{{ clientModel.NIP }}"
                             class="form-control form-control-lg {{ errors.NIP ? 'is-invalid' : '' }}">
-                    <label for="password">NIP</label>
-                    <span class="invalid-feedback">{{ errors.NIP | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <select id="type" type="text" name="type" class="form-select form-control-lg">
-                        <option value="Individual" {{ clientModel.Type == 'Individual' ? 'selected' : '' }}>Individual</option>
-                        <option value="Company" {{ clientModel.Type == 'Company' ? 'selected' : '' }}>Company</option>
-                    </select>
-                    <label for="type">Typ</label>
+                        <label for="password">NIP</label>
+                        <span class="invalid-feedback">{{ errors.NIP | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <select id="type" type="text" name="type" class="form-select form-control-lg">
+                            <option value="Individual" {{ clientModel.Type == 'Individual' ? 'selected' : '' }}>
+                                Individual
+                            </option>
+                            <option value="Company" {{ clientModel.Type == 'Company' ? 'selected' : '' }}>Company
+                            </option>
+                        </select>
+                        <label for="type">Typ</label>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
-                <div class="form-floating w-100">
-                    <input
+            <div class="col">
+                <div class="container d-flex flex-column justify-content-center align-items-center gap-3 w-50">
+                    <div class="form-floating w-100">
+                        <input
                             id="addressId"
                             type="text"
                             name="addressId"
                             value="{{ addressModel.Id }}"
                             readonly
                             class="form-control form-control-lg">
-                    <label for="addressId">Adres ID</label>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="addressId">Adres ID</label>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="city"
                             type="text"
                             name="city"
                             value="{{ addressModel.City }}"
                             class="form-control form-control-lg {{ errors.city ? 'is-invalid' : '' }}">
-                    <label for="city">Miasto</label>
-                    <span class="invalid-feedback">{{ errors.city | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="city">Miasto</label>
+                        <span class="invalid-feedback">{{ errors.city | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="street"
                             type="text"
                             name="street"
                             value="{{ addressModel.Street }}"
                             class="form-control form-control-lg {{ errors.street ? 'is-invalid' : '' }}">
-                    <label for="street">Ulica</label>
-                    <span class="invalid-feedback">{{ errors.street | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="street">Ulica</label>
+                        <span class="invalid-feedback">{{ errors.street | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="postCode"
                             type="text"
                             name="postCode"
                             value="{{ addressModel.PostCode }}"
                             class="form-control form-control-lg {{ errors.postCode ? 'is-invalid' : '' }}">
-                    <label for="postCode">Kod pocztowy</label>
-                    <span class="invalid-feedback">{{ errors.postCode | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="postCode">Kod pocztowy</label>
+                        <span class="invalid-feedback">{{ errors.postCode | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="houseNumber"
                             type="text"
                             name="houseNumber"
                             value="{{ addressModel.HouseNumber }}"
                             class="form-control form-control-lg {{ errors.houseNumber ? 'is-invalid' : '' }}">
-                    <label for="houseNumber">Numer domu</label>
-                    <span class="invalid-feedback">{{ errors.houseNumber | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="houseNumber">Numer domu</label>
+                        <span class="invalid-feedback">{{ errors.houseNumber | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="phone"
                             type="text"
                             name="phone"
                             value="{{ addressModel.Phone }}"
                             class="form-control form-control-lg {{ errors.phone ? 'is-invalid' : '' }}">
-                    <label for="phone">Numer telefonu</label>
-                    <span class="invalid-feedback">{{ errors.phone | first }}</span>
-                </div>
-                <div class="form-floating w-100">
-                    <input
+                        <label for="phone">Numer telefonu</label>
+                        <span class="invalid-feedback">{{ errors.phone | first }}</span>
+                    </div>
+                    <div class="form-floating w-100">
+                        <input
                             id="email"
                             type="text"
                             name="email"
                             value="{{ addressModel.Email }}"
                             class="form-control form-control-lg {{ errors.email ? 'is-invalid' : '' }}">
-                    <label for="email">Email</label>
-                    <span class="invalid-feedback">{{ errors.email | first }}</span>
+                        <label for="email">Email</label>
+                        <span class="invalid-feedback">{{ errors.email | first }}</span>
+                    </div>
+                    <button class="btn btn-success w-100">Edytuj klienta</button>
+                    <a href="#" onclick="goBack(); return false;" class="btn btn-danger w-100">Anuluj</a>
                 </div>
-                <button class="btn btn-outline-success w-100">Edytuj klienta</button>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 {% endblock main %}
